--- a/form.html
+++ b/form.html
@@ -28,7 +28,37 @@
           Your Phone:
           <input type="text" id="phone" placeholder="your phone" />
         </label>
-        <p>This is the end</p>
+          <fieldset>
+            <legend> Pick one pitha</legend>
+            <label for="chitoi">
+              <input type="radio" name="pitha" id="chitoi">Chitoy
+            </label>
+            <label for="vapa">
+              <input type="radio" name="pitha" id="vapa">Vapa
+            </label>
+            <label for="puri">
+              <input type="radio" name="pitha" id="puri">Puri
+            </label>
+          </fieldset>   
+          <fieldset>
+            <legend>Pick one or more vorta</legend>
+            <label for="sorisa">
+              <input type="checkbox" name="vorta" id="sorisa"> sorisa
+            </label>
+            <label for="sutki">
+              <input type="checkbox" name="vorta" id="sutki"> sutki
+            </label>
+            <label for="chili">
+              <input type="checkbox" name="vorta" id="chili" >chili
+            </label>
+            <fieldset>
+              <legend>Special Instruction</legend>
+              <textarea name="" id="" cols="30" rows="5"></textarea>
+            </fieldset>
+
+          </fieldset> 
+          <input type="reset" value="reset">
+          <input type="submit" value="submit">
       </form>
     </main>
     <footer></footer>
